--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -124,7 +124,7 @@
       <p class="gutter-side text-right"><em>Calvin and Hobbes</em> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
-        <h3>A Comic Future</h3>
+        <h3 class="linebreak">A Comic Future</h3>
         <p><em>Bottom of the Ninth</em>&mdash;an app with an animated comic book, published in 2012 by Ryan Woodward&mdash;was released in a moment when Apple iPhone and iPad were pervading popular culture. Phone and tablet interfaces, already in constant flux, were in a systematic transition away from a philosophy of skeuomorphic design.</p>
 
         <p class="linebreak">Skeuomorphism was applied, for example, in early iPhone interface designs to make them familiar—to visually bridge a contextual gap between past and present modes of interaction. Somewhere, at some intersection of skeuomorphic design and the philosophy of Marshall McLuhan, a comic book page was appropriated as the interface in an app.</p>
