--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -90,15 +90,15 @@
 
         <p class="linebreak"><em>An edition of the cover art was designed especially to send as personalized thank-you cards to those who have supported the art, code and music behind <em>White Elephant</em>. When the companion app for <em>White Elephant</em> is in the app store, both the digital and the printed version of the cover art will be an image tracker for an <a href="../technology-ar/" title="What is Augmented Reality?">augmented reality</a> (AR) experience. The cards have been printed in limited edition for journeyers who get behind the scenes in wildlife art. This invitation extends to everyone who shares our love for wildlife and a world with elephants.</em></p>
 
-      </div>
+      <!-- </div>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>There’s no cause for alarm. I chopped just one tree. I am doing no harm. I’m being quite useful.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Once-ler, <em>The Lorax</em> (1971)</font></h4>
 
       </div>
 
-      <div>
-        <h3>Cover Art Cards</h3>
+      <div> -->
+        <h3 class="linebreak">Cover Art Cards</h3>
         <p>It matters that the things we make are meaningful to see, to hear, to touch and so on. Also, it matters that the things we make are responsibly sourced with regard to the use of materials. In the case of a simple card, the type of ink on the type of paper are design choices that manifest in the tactile quality of an art reproduction in print. And so for this first print campaign at Animat Habitat, the studio has made the conservative and more traditional selection of one hundred per cent recycled, uncoated white paper. This selection prioritized all eco-friendly practices over any aesthetic properties. The brown base color of kraft paper was of particular interest, however, printing on white card-stock offered more dynamic range to more accurately represent the digital artwork in print. The dynamic range is important for creating a high contrast image, and points of high contrast are important for image tracking in augmented reality. The uncoated card-stock is another design choice with a bias to an augmented reality experience &ndash; namely to the lens of a camera in an iPhone &ndash; as the matte finish of the card-stock helps to reduce glare on the surface of the image.</p>
 
         <p class="linebreak">The limited edition <em>White Elephant</em> cover art card was printed on recycled paper with non-toxic, vegetable-based inks by Green Printer. This Canadian company has communicated an awareness of the impact of the pulp and paper industry, &ldquo;the third largest industrial polluter of air, water and land in both Canada and the United States.&rdquo; And so that is why we, at Animat Habitat, have considered the card-stock and printing solution to be sent as thank-you cards for your support. <em>Thank you for joining the journey here at the start of the story.</em></p>
@@ -107,10 +107,10 @@
 
       </div>
 
-      <div class="color quote">
+      <!-- <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>I speak for the trees, for the trees have no tongues.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Dr Seuss: The Lorax, <em>The Lorax</em> (1971)</font></h4>
 
-      </div>
+      </div> -->
 
       <div class="clear">
         <div id="register-toggle">
