--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div>
-        <h3>Teeth and Tusks</h3>
+        <h3 class="linebreak">Teeth and Tusks</h3>
         <p>An elephant only has four molars at any one time, with two on top and two on bottom. These molars are located along both sides of the upper and lower jaw. Each molar is the size of a brick, and weighs up to about twenty pounds. An elephant can only grow six sets of these molars in a lifetime. These molars grind away from use all day, everyday. When the sixth set of molars is worn down from forever chewing fodder, the elephant is soon to starve, unable to supplement a diet with tree bark and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <p class="linebreak">The life expectancy of an elephant in the wild is sixty to seventy years.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
