--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -115,7 +115,7 @@
       </div>
 
       <div>
-        <h3>Across The Ravaged Land</h3>
+        <h3 class="linebreak">Across The Ravaged Land</h3>
         <p>The photography of Nick Brandt from his time in Amboseli speaks for itself, with each portrait speaking of a character in a story with an ending that gave life to Big Life Foundation. These photographs are collected in a trilogy of books documenting the disappearing animals of East Africa, altogether titled: <em>On This Earth, A Shadow Falls Across The Ravaged Land</em>. In the third and final volume, Nick returned to Amboseli for the first time in two years. This time, when he approached, Nick wrote in an essay on conservation, &ldquo;what had once been some of the most relaxed of elephant herds [&hellip;] they would run in terrified panic.&rdquo; This essay introduced the final volume of his trilogy: <em>Across The Ravaged Land</em>, and his words speak to the foundation of Big Life:</p>
 
         <div class="clear-bottom">
