--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -46,7 +46,7 @@
       <h1 class="title">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></h1>
       <h3 class="scene-one">Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></a></h1>
-      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.</font><font class="fr">&nbsp;&#92;&nbsp;Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></h3>
+      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.</font><br><font class="fr">Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></h3>
     </div>
   </header>
 
@@ -68,22 +68,21 @@
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="color">White Elephant</h2>
-            <h5 class="scene-one">Comic Book<font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
+            <h5 class="scene-one"><font class="overscore">Comic Book</font><font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
             <p>28 pages.</p>
             <p>Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</p>
             <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au</font> Canada.</p>
 
             <p class="linebreak lineend">Journey with an elephant across a sea of sand: <em>White Elephant</em> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <em>&Eacute;l&eacute;phant blanc</em> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'app qui l'accompagne. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat.</font></p>
 
-            <h5>UNESCO World Heritage Site<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a>.</h5>
+            <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5>
 
           </div>
 
           <div class="clear diptych">
 
-            <div>
-              <h5>E-book<font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">E-book</font><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
               <p>Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En, Fr<!--, Zh-HanT*--></p>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">15</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">12</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0101 0511</font></p>
@@ -91,8 +90,8 @@
 
             </div>
 
-            <div>
-              <h5>Full Color Paperback<font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
               <p>Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En, Fr</p>
               <p>Limited edition.<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition limit&eacute;e.</font><!-- ? copies--></p>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">50</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price-us">87</font></font></p>
@@ -111,7 +110,7 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="trim" src="../../inc/img/boutique/01/oafa.1.cover.420-640.jpg" /></a>
-                <p class="text-right"><em>White Elephant</em> &ndash; Kavango, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font></p>
+                <p class="text-right"><em>White Elephant</em>, Angola &middot; Botswana &middot; Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font></p>
             </div>
           </div>
 
@@ -119,11 +118,11 @@
 
         <div class="clear ptych-right product-stock">
 
-          <div>
-            <h4 class="in-stock"><font class="thin">December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font> 2024</font></h4>
+          <div class="clear-bottom">
+            <h4 class="in-stock"><font class="clear title">White<font class="letterspace-sp"> </font><font class="thin">Elephant</font></font> <font class="thin">(December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font>&nbsp;2024)</font></h4>
             <h5 class="stock woo-article">Two editions available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux &eacute;ditions pr&ecirc;t &agrave; pr&eacute;commander.</font></h5>
 
-            <h5 class="woo-article-title"><font class="title">White Elephant</font> <font class="small">E-book<font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></font></h5>
+            <h5 class="woo-article-title"><font class="small"><font class="overscore">E-book</font><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -165,9 +164,9 @@
 
           </div>
 
-          <div>
+          <div class="clear-bottom">
 
-            <h5 class="woo-article-title"><font class="title">White Elephant</font> <font class="small">Full Color Paperback<font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></font></h5>
+            <h5 class="woo-article-title"><font class="small"><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -196,9 +195,7 @@
             </form>
 
             <div class="clear paypal-ca">
-              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+              <p class="linebreak small">Shipping within Canada is included. Please select the <u>International</u> option for shipping outside Canada. International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse. Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada. L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
 
             </div>
 
@@ -217,14 +214,11 @@
 
   </div>
 
-  <div class="clear color">
-    <section class="single">
-      <div class="quote">
-        <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+  <div class="clear">
+    <div class="quote clear-bottom text-center">
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
 
-      </div>
-
-    </section>
+    </div>
 
   </div>
 
