--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -65,22 +65,20 @@
         <div class="clear ptych-center product-summary">
 
           <div>
-            <h2 class="color">White Tiger</h2>
-
-            <h5 class="scene-two">Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+            <h5 class="scene-two"><font class="overscore">Oil Painting</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
             <h5 class="woo-description">Gamblin artists colors on linen canvas.<font class="fr">&nbsp;&#92;&nbsp;Couleurs d'artistes Gamblin sur toile de lin.</font></h5>
-            <h5 class="author">Oil painting by Dane Aleksander.<font class="fr">&nbsp;&#92;&nbsp;Peinture a l'huile par Dane Aleksander.</font></h5>
+            <h5 class="author">Oil painting by<font class="fr">&nbsp;&#92;&nbsp;Peinture a l'huile par</font> Dane Aleksander.</h5>
             <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au</font> Canada.</p>
 
             <p class="linebreak lineend"><em>White Tiger</em> is an oil painting of an Amur tiger in the taiga. This painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for safe handling as well as for framing options. The archival pigment prints are available in two sizes. A digital copy of the corrected and edited photograph is also available. The digital download includes a range of resolutions.<font class="fr">&nbsp;&#92;&nbsp;<em>Tigre blanc</em> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette peinture est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible. Le t&eacute;l&eacute;chargement num&eacute;rique comprend une gamme de r&eacute;solutions.</font></p>
 
-            <h5>UNESCO World Heritage Site<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a class="title" href="../../url/whc/1234/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Putorana Plateau">Putorana Plateau</a>.</h5>
+            <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a class="score" href="../../url/whc/1234/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Putorana Plateau">Putorana Plateau</a></h5>
 
           </div>
 
           <div class="clear diptych">
 
-            <div>
+            <div class="clear-bottom">
               <h5>Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
               <p>Dimension: 30&nbsp;&times;&nbsp;15 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0200 0011</font></p>
@@ -88,12 +86,12 @@
 
             </div>
 
-            <div>
-              <h5>Digital Image<font class="fr">&nbsp;&#92;&nbsp;num&eacute;rique</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Digital Image</font><font class="fr">&nbsp;&#92;&nbsp;num&eacute;rique</font></h5>
               <p>Dimension: 3240&nbsp;&times;&nbsp;1620 px</p>
               <div class="small">
                 <p>All included format collections:<font class="fr">&nbsp;&#92;&nbsp;Toutes les collections de formats inclus&nbsp;:</font></p>
-                <p>Ultra HD.</p>
+                <p>Ultra HD</p>
               </div>
               <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">2</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">2</font></font></p>
               <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0201 0111</font></p>
@@ -101,8 +99,8 @@
 
             </div>
 
-            <div>
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
               <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
@@ -114,8 +112,8 @@
 
             </div>
 
-            <div>
-              <h5>Limited Edition Gicl&eacute;e<font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
+            <div class="clear-bottom">
+              <h5><font class="overscore">Limited Edition Gicl&eacute;e</font><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
               <p>Dimension: 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <div class="small">
                 <p>Print area within matte:<font class="fr">&nbsp;&#92;&nbsp;Zone d'impression dans le cache&nbsp;:</font></p>
@@ -146,11 +144,11 @@
 
         <div class="clear ptych-right product-stock">
 
-          <div>
-            <h4 class="in-stock"><font class="thin">Scheduled:<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vue&nbsp;:</font> December 2022</font></h4>
+          <div class="clear-bottom">
+            <h4 class="in-stock"><font class="title">White<font class="letterspace-sp"> </font><font class="thin">Tiger</font></font> <font class="thin">(December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font>&nbsp;2024)</font></h4>
             <h5 class="stock woo-article">Digital copy and two print sizes available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique et deux tailles de gicl&eacute;e pr&ecirc;t &agrave; pr&eacute;commander avec PayPal.</font></h5>
 
-            <h5 class="woo-article-title"><font class="title">White Tiger</font> <font class="small">Digital Copy<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique</font></font></h5>
+            <h5 class="woo-article-title"><font class="small"><font class="overscore">Digital Copy</font><font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique</font></font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -172,8 +170,8 @@
 
           </div>
 
-          <div>
-            <h5 class="woo-article-title"><font class="title">White Tiger</font> 12&nbsp;&times;&nbsp;8 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 200</font></h5>
+          <div class="clear-bottom">
+            <h5 class="woo-article-title"><font class="small"><font class="overscore">Gicl&eacute;e</font>, 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font>, Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 250</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -203,8 +201,8 @@
 
           </div>
 
-          <div>
-            <h5 class="woo-article-title"><font class="title">White Tiger</font> 20&nbsp;&times;&nbsp;12 <font class="small">Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25</font></h5>
+          <div class="clear-bottom">
+            <h5 class="woo-article-title"><font class="small"><font class="overscore">Gicl&eacute;e</font>, 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font>, Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 
@@ -233,9 +231,7 @@
             </form>
 
             <div class="clear paypal-ca">
-              <p class="linebreak small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse.</font></p>
-              <p class="linebreak small">Please select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada.</font></p>
-              <p class="linebreak small">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
+              <p class="linebreak small">Shipping within Canada is included. Please select the <u>International</u> option for shipping outside Canada. International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat &frasl; Terms of Purchase">Terms of Purchase</a><font class="fr">&nbsp;&#92;&nbsp;L'exp&eacute;dition au Canada est incluse. Veuillez s&eacute;lectionner l'option <u>Internationale</u> pour l'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada. L'exp&eacute;dition &agrave; l'ext&eacute;rieur du Canada est limit&eacute;e aux pays r&eacute;pertori&eacute;s comme disponibles pour l'exp&eacute;dition international dans les conditions d'achat de la boutique.</font></p>
 
             </div>
 
@@ -254,12 +250,11 @@
 
   </div>
 
-  <div class="clear color">
-    <section class="single">
-      <div class="quote">
-        <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
-      </div>
-    </section>
+  <div class="clear">
+    <div class="quote clear-bottom text-center">
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+    </div>
+
   </div>
 
   <section class="single">
