--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -57,28 +57,27 @@
 
   <div class="clear color">
 
-    <section class="product single" id="scene">
+    <section class="product" id="scene">
 
       <div class="clear type-product">
 
         <div class="clear ptych-center product-summary">
 
           <div>
-
-            <h2 class="color">White Rhino</h2>
-            <h5 class="scene-zero">Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
+            <!-- <h2 class="color">White Rhino</h2> -->
+            <h5 class="scene-zero"><font class="overscore">Oil Painting</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
             <p>P&eacute;b&eacute;o oil colors on canvas.<font class="fr">&nbsp;&#92;&nbsp;Couleurs &agrave; l'huile P&eacute;b&eacute;o sur toile.</font></p>
             <p>Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</p>
             <!-- <p>Created in<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p> -->
 
             <p class="linebreak lineend"><em>White Rhino</em> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<em>Rhinoc&eacute;ros blanc</em> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
 
-            <h5>UNESCO World Heritage Site<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <font>Ngorongoro Conservation Area</font>, #<a class="title" href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">39</a>.</h5>
+            <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5>
           </div>
 
           <div class="clear diptych">
 
-            <div>
+            <div class="clear-bottom">
               <h5>Oil Painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
               <p>Dimension: 30&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font></p>
               <p>Show Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> 04.2007</p>
@@ -95,7 +94,7 @@
             <div class="preview-thumbnail" id="preview-thumbnail">
               <a onclick="toggle_preview();">
                 <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="trim" src="../../inc/img/boutique/00/oafa.0.480-160.jpg" /></a>
-                <p class="text-right"><em>White Rhino</em> &ndash; Ngorongoro, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint, 2007) &copy; Dane Aleksander</p>
+                <p class="text-right"><em>White Rhino</em>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint, 2007) &copy; Dane Aleksander</p>
             </div>
           </div>
 
@@ -107,12 +106,11 @@
 
   </div>
 
-  <div class="clear color">
-    <section class="single">
-      <div class="quote">
-        <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
-      </div>
-    </section>
+  <div class="clear">
+    <div class="quote clear-bottom text-center">
+      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises &agrave; jour du projet</font></h2>
+    </div>
+
   </div>
 
   <section class="single">
@@ -140,7 +138,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small"> .<font class="fr">&nbsp;&#92;&nbsp;.</font></p>
+      <!-- <p class="small"> .<font class="fr">&nbsp;&#92;&nbsp;.</font></p> -->
 
     </div>
 
