--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -52,7 +52,7 @@
       <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
-        <h3>Change in Africa</h3>
+        <h3 class="linebreak">Change in Africa</h3>
         <p>Pressure on natural habitats is fueling extreme climates and species loss. Human population and technological growth are creating a global network of people that are more aware of &ndash; and more accountable for &ndash; the fragile state of the planet. Now, more than ever.</p>
 
         <p class="linebreak">It is clear that recent human history has imposed an imbalance in ecosystems on Earth. It is unbearably sad to stand by while entire species go extinct, knowing that the most beautiful animals on the planet are far from safe, knowing that this generation may be the last to live in a world with elephants in the wild, knowing that wild places may only exist in picture books for our children's children and so on.</p>
@@ -78,7 +78,7 @@
       </div>
 
       <div>
-        <h3>Change at Home</h3>
+        <h3 class="linebreak">Change at Home</h3>
         <p><em>Change starts at home.</em> It is in our power to encourage eco-friendly practices in our own communities, to help mitigate the collective human impact on the environment on a local scale, and to live more resourcefully on an individual basis. As we focus on making the best, and not simply the most, of the land we hold now, we can take the next steps together to make life sustainable for the generations to come.</p>
 
         <p class="linebreak">We can help simply by not continuing to uphold a system that chooses short-term, clear-cut-and-run profits over sustainable harvests. We can help by leaving some habitats as wilderness. We need to help by saving space for forests and jungles and waterways. Earth needs to have ecosystems that exist apart from people and away from the cities that have been raised on the natural resources that surround them.</p>
