--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -40,13 +40,11 @@
         <h4 class="letterhead thin">March 2017</h4>
         <h2 class="scene-one">Making of Ella Ch.&nbsp;3: Elephant</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat</h5>
-      </div>
 
-      <div>
-        <h3>Ella, African Savanna Elephant</h3>
-        <p>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</p>
+        <p class="linebreak"><em>Elephants are an umbrella species. They are ecosystem engineers. Biodiversity cascades from their presence. Elephants are a keystone species in Africa. The elephant is an iconic symbol of the continent. When we think of Africa, we most often think of elephants. They are a symbol of power and strength, memory and wisdom, good luck and so on. If we as a people are unable, or unwilling, to save the smartest, largest, greatest land-living mammal in the world &ndash; a species that has roamed the earth for millions of years &ndash; then it is unclear what hope remains for other animals. This is where our story begins.</em></p>
 
-        <p class="linebreak">Meet Ella, the elephant.</p>
+        <h3 class="linebreak">Ella, African Savanna Elephant</h3>
+        <p>Meet Ella, the elephant.</p>
 
       </div>
 
