--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -164,7 +164,7 @@
 
           </div>
 
-          <div class="clear-bottom">
+          <div>
 
             <h5 class="woo-article-title"><font class="small"><font class="overscore">Full Color Paperback</font><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></font></h5>
 
