--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -201,7 +201,7 @@
 
           </div>
 
-          <div class="clear-bottom">
+          <div>
             <h5 class="woo-article-title"><font class="small"><font class="overscore">Gicl&eacute;e</font>, 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;pouce</font>, Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25</font></h5>
 
             <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
