--- a/boutique/medium/giclee/tim/index.html
+++ b/boutique/medium/giclee/tim/index.html
@@ -29,7 +29,7 @@
       <li class="crumb dark"><a href="../" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.">Gicl&eacute;e</a></li>
       <li class="crumb active dark"><a><em>Tim</em></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right thin"><a class="title" onclick="toggle_currency();" title="Animat Habitat ."><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
+      <li class="right thin"><a class="title" onclick="toggle_currency();"><font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font><font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>&nbsp;<font class="currency-symbol">&#36;</font></a></li>
     </ul>
   </nav>
 
