--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
-      <h3>Art for the conservation of endangered species and their natural habitats.<font class="fr">&nbsp;&#92;&nbsp;Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
+      <h3>Art for the conservation of endangered species and their natural habitats.<font class="fr"> <br>Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
 
     </div>
 
@@ -163,9 +163,10 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <em>Oswald</em> [Extra-Light, Medium] licensed under the SIL Open Font License 1.1, and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
+        <p class="linebreak small">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <em>Oswald</em> [Extra-Light, Medium], and then archived with GitHub pages.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat site officiel con&ccedil;u et d&eacute;velopp&eacute; par Dane Aleksander avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts, et puis archiv&eacute; avec les pages GitHub.</font></p>
 
-        <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy. <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
+        <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy.
+        <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
 
         <p class="linebreak small">Animat Habitat <a href="support/" title="Animat Habitat support.">Sitemap</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
 
